--- a/code/dev/parts/dashboard/dashboard.tpl.html
+++ b/code/dev/parts/dashboard/dashboard.tpl.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
-    <adf-dashboard name="{{dashboard.name}}" structure="dashboard.structure" adf-model="dashboard.model" />
+  <div class="col-md-12" ng-if="dashboard.model">
+    <adf-dashboard name="{{dashboard.name}}" structure="dashboard.model.structure" adf-model="dashboard.model" />
   </div>
 </div>
