--- a/code/parts/dashboard/dashboard-title.tpl.html
+++ b/code/parts/dashboard/dashboard-title.tpl.html
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-md-6">
+  <dashboard-btn-new class="h2 pull-left" ng-if="!editMode && !!model"></dashboard-btn-new>
     <h2 class "pull-left page-title">
+        <span style="font-size: 16px" class="pull-left">
 
-<span style="font-size: 16px" class="pull-left">
-
-  <dashboard-btn-new ng-if="!editMode"></dashboard-btn-new>
   </span>
    {{model.title}}
 
@@ -25,9 +24,9 @@
 </h2>
   </div>
   <div class='col-md-6'>
-    <div class="row h2 form-inline clearfix">
+    <div class="row form-inline clearfix">
       <!-- TODO: make directive autorefresh-time-period -->
-      <div class="form-group">
+      <div class="form-group  h2 pull-right">
         <select class="select2 form-control fixed " ng-model="model.options.autorefresh">
           <option value="5">Each 5 Minutes</option>
           <option value="15">Each 15 Minutes</option>
@@ -35,7 +34,7 @@
           <option value="60">Each 1 Hour</option>
           <option value="">No auto-refresh</option>
         </select>
-        <button class="btn btn-info " ng-click="dashboard.reload()">
+        <button class="btn btn-info " ng-click="model.refreshNow= true">
           <i class="glyphicon glyphicon-refresh"></i> Refresh now
         </button>
       </div>
